# SquareRoot2Py

./: .gitignore  README.md  SquareRoot2Py.py  pyproject.toml
SquareRoot2Py/: RoundedSquareRoot2Py.py  SquareRoot2PyWithAdjustableRounding.py  __init__.py
SquareRoot2Py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
